--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,13 +1,14 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>InOut</ion-title>
+    <ion-title>
+      Ionic Blank
+    </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <p>{{entries}}</p>
-  <button ion-button secondary (click)="toggle()">Toggle Menu</button>
+  The world is your oyster.
+  <p>
+    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+  </p>
 </ion-content>
