--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,22 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-navbar color="primary">
+    <button ion-button><ion-icon name="search"></ion-icon></button>
+    <ion-title><h1>{{balance/100}} €</h1></ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let entry of entries">
+      <ion-avatar item-start>
+        <canvas class="avatarCategory" width="48" height="48">
+        </canvas>
+      </ion-avatar>
+      <h2>{{entry.category}}</h2>
+      <p>{{entry.time}}</p>
+      <h1 item-end>{{entry.price}}€</h1>
+    
+    </ion-item>
+  </ion-list>
+  <button class="addBtn" [navPush]="addEntry"><ion-icon name="add"></ion-icon></button>
 </ion-content>
