added Impressumpages, without complete text

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,16 +1,28 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title><h1 style="width:100%;">{{balance/100}} €</h1></ion-title>
+
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+
+    <ion-title>
+      <h1 style="width:100%;">{{balance/100}} €</h1>
+    </ion-title>
+
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-    <ion-fab bottom right>
-        <button ion-fab color="ora"><ion-icon name="add"></ion-icon></button>
-        <ion-fab-list side="left">
-          <button ion-fab [navPush]="addEntry"><ion-icon name="add"></ion-icon></button>
-        </ion-fab-list>
-      </ion-fab>
+  <ion-fab bottom right>
+    <button ion-fab color="ora">
+      <ion-icon name="add"></ion-icon>
+    </button>
+    <ion-fab-list side="left">
+      <button ion-fab [navPush]="addEntry">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-fab-list>
+  </ion-fab>
   <ion-list>
     <ion-item *ngFor="let entry of entries" [navPush]="detailsPage" [navParams]="entry">
       <ion-avatar item-start>
@@ -22,7 +34,7 @@
       <p>{{entry.formatDate(entry.time, 'LAST_TWO')}}: {{entry.details}}</p>
 
       <h1 item-end>{{entry.price}}€</h1>
-    
+
     </ion-item>
   </ion-list>
 </ion-content>
