new Release: Imressum and disclaimer are now complete google analytics is included

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
   <title>InOut</title>
@@ -29,7 +30,19 @@
   <link href="build/main.css" rel="stylesheet">
 
 </head>
+
 <body>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110036319-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-110036319-1');
+  </script>
+
 
   <noscript>
     We are very sorry but you need to use Javascript to use the webapp.
@@ -49,4 +62,5 @@
   <script src="build/main.js"></script>
 
 </body>
+
 </html>
