--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,15 @@
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <!--<script src="cordova.js"></script>-->
-
-  <script>
+  <!-- TODO uncomment before republishing it
+    <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('service worker installed'))
         .catch(err => console.error('Error', err));
     }
   </script>
-
+-->
   <link href="build/main.css" rel="stylesheet">
 
 </head>
