--- a/src/pages/add-entry/add-entry.html
+++ b/src/pages/add-entry/add-entry.html
@@ -36,12 +36,55 @@
     <ion-grid>
       <ion-row>
         <ion-col col-6>
-          <button ion-button full (click)="addEntryToStorage(1)" navPop><ion-icon name="add"></ion-icon></button>
+          <button ion-button full (click)="addEntryToStorage(1)" navPop>
+            <ion-icon name="add"></ion-icon>
+          </button>
         </ion-col>
         <ion-col col-6>
-            <button ion-button full (click)="addEntryToStorage(-1)" navPop><ion-icon name="remove"></ion-icon></button>
-          </ion-col>
+          <button ion-button full (click)="addEntryToStorage(-1)" navPop>
+            <ion-icon name="remove"></ion-icon>
+          </button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <!-- show repeat Icon (repeat not active)-->
+        <ion-col col-3 *ngIf="!inputObj.repeat.repeat">
+          <button ion-button outline (click)="showSubList = showSubList === 'none' ? 'repeat': 'none';">
+            <ion-icon name="repeat"></ion-icon>
+          </button>
+        </ion-col>
+        <ion-col col-3 *ngIf="inputObj.repeat.repeat">
+          <button ion-button full (click)="showSubList = showSubList === 'none' ? 'repeat': 'none';">
+            <ion-icon name="repeat"></ion-icon>
+          </button>
+        </ion-col>
       </ion-row>
     </ion-grid>
+  </ion-list>
+  <!-- show update algorithm -->
+  <ion-list *ngIf="showSubList === 'repeat'">
+    <ion-item>
+      <ion-label>Wiederholung:</ion-label>
+      <ion-checkbox color="primary" (click)="inputObj.repeat.repeat = !inputObj.repeat.repeat;"></ion-checkbox>
+    </ion-item>
+    <!-- weekly -->
+    <!-- checkbox-->
+    <ion-item>
+        <ion-label>Wöchentlich:</ion-label>
+        <ion-checkbox color="primary" (click)="inputObj.repeat.weekly = inputObj.repeat.weekly === undefined ? [0] : undefined;"></ion-checkbox>
+    </ion-item>
+    <!-- dayPicker -->
+    <ion-item *ngIf="inputObj.repeat.weekly">
+        <ion-label>Tag:</ion-label>
+        <ion-select [(ngModel)]="inputObj.repeat.weekly" multiple="true">
+          <ion-option value="1">Montag</ion-option>
+          <ion-option value="2">Dienstag</ion-option>
+          <ion-option value="3">Mittwoch</ion-option>
+          <ion-option value="4">Donnerstag</ion-option>
+          <ion-option value="5">Freitag</ion-option>
+          <ion-option value="6">Samstag</ion-option>
+          <ion-option value="0">Sonntag</ion-option>
+        </ion-select>
+      </ion-item>
   </ion-list>
 </ion-content>
