--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,7 +31,7 @@
 	  </ion-avatar>
 
 	  <h2>{{entry.category}}</h2>
-	  <p>{{entry.formatDate(entry.time, 'LAST_TWO')}}: {{entry.details}}</p>
+	  <p>{{inoutEntry.formatDate(entry.time, 'LAST_TWO')}}: {{entry.details}}</p>
 
 	  <h1 item-end>{{entry.price}}€</h1>
 
